<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smusic</string>
     <string name="music_control">"Music_ControlActivity"</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Mymusic">"我的音乐"</string>
    <string name="name">"long shot"</string>
    <string name="note">"2315431"</string>
    <string name="username">"音苍"</string>
    <string name="description">"description"</string>
    <string name="time">"00:00"</string>
    <string name="siger">"周杰伦"</string>
    <string name="artist">"依然范特西"</string>
    <string name="songname">"龙卷风"</string>
    <string name="songartist">"周杰伦"</string>
	<string name="songlyric">"
	    					   爱像一阵风 吹完它就走
							  这样的节奏 谁都无可奈何
							  没有你以后 我灵魂失控
							  黑云在降落 我被它拖着走
								静静悄悄默默离开
								陷入了危险边缘Baby
								我的世界已狂风暴雨

								爱情来的太快就像龙卷风
								离不开暴风圈来不及逃
							    我不能再想 我不能再想
								  我不我不我不能

								爱情走的太快就像龙卷风
								不能承受我已无处可躲
								我不要再想 我不要再想
							   我不我不我不要再想你"</string>
</resources>