<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" 
    android:background="@drawable/bg3"
    android:id="@+id/layout_main">

    <RelativeLayout
    android:id="@+id/layout_title"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    >
      	<TextView
          android:id="@+id/textview_title"
          android:layout_width="200dp"
   		  android:layout_height="match_parent"
   		  android:text="@string/Mymusic" 
   		  android:layout_marginLeft="10dp"
   		  android:gravity="left|center"
   		  android:textColor="#000000"
   		  android:textSize="18sp"
   		/>

		 <RelativeLayout
		     android:id="@+id/layout_userinfo"
		     android:layout_width="200dp"
		     android:layout_height="50dp"
		     android:layout_alignParentRight="true">
		     <ImageView
		         android:id="@+id/img_userhead"
		         android:layout_width="50dp"
		         android:layout_height="50dp"
		         android:layout_centerInParent="true"
		          android:layout_alignParentRight="true"
		         android:contentDescription="@string/description"
		         android:src="@drawable/head" />
		     
		     <TextView
		         android:id="@+id/textview_username"
		         android:layout_width="80dp"
		         android:layout_height="match_parent"
				 android:layout_toStartOf="@id/img_userhead"
		         android:layout_marginTop="2dp"
		         android:gravity="right"
		         android:text="@string/username"
		         android:contentDescription="@string/description"
		         android:textColor="#000000"
		         android:textSize="18sp" />

		 </RelativeLayout>

	</RelativeLayout>
	
    
	<ListView
	android:id="@+id/listview_music"
	android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/layout_title"
    android:layout_marginBottom="60dp"
	> 
	</ListView>
	
	
	
	<RelativeLayout
	android:id="@+id/layout_bottom"
    android:layout_width="match_parent"
    android:background="#ffffff"
    android:layout_height="60dp"
    android:layout_alignParentBottom="true"
	>
      	<RelativeLayout
      	android:id="@+id/music_info"
      	android:layout_width="200dp"
    	android:layout_height="60dp"
      	>
    		<ImageButton
        	android:id="@+id/btn_music_photo"
        	android:layout_width="60dp"
   			android:layout_height="60dp"
   			android:contentDescription="@string/description"
   			android:src="@drawable/music"
   			android:background="#ffffff"
   			android:layout_alignParentLeft="true"
   			/>
    
			<RelativeLayout
			android:id="@+id/layout_note"
   			android:layout_width="130dp"
   			android:layout_height="wrap_content"
    		android:layout_toRightOf="@id/btn_music_photo"
			>
				<TextView
        		android:id="@+id/textview_musicname"
        		android:layout_width="130dp"
   				android:layout_height="wrap_content"
   				android:layout_marginLeft="5dp"
   			
   				android:layout_alignParentTop="true"
   				android:text="@string/name"
   				android:textSize="18sp"
   				android:textColor="#000000"
          		/>
				<TextView
        		android:id="@+id/textview_musicnote"
         		android:layout_width="130dp"
   				android:layout_height="wrap_content"
   				android:hint="@string/note"
   				android:layout_marginLeft="5dp"
   				android:textSize="13sp"
   				android:layout_below="@id/textview_musicname"
   				android:layout_alignParentBottom="true"
   				android:textColor="#000000"
   		  		/>
    		</RelativeLayout>
    	</RelativeLayout>
		
		<RelativeLayout
		android:id="@+id/layout_control"
   		android:layout_width="200dp"
   		android:layout_height="wrap_content"
    	android:layout_toRightOf="@id/music_info"
    	android:layout_alignTop="@id/music_info"
  		android:layout_alignParentBottom="true"
		>
			<ImageButton
			android:id="@+id/btn_previous"
			android:layout_width="32dp"
   			android:layout_height="32dp"
   			android:layout_marginLeft="5dp"
   			android:layout_marginRight="5dp"
   			android:layout_centerVertical="true"
   			android:layout_alignParentLeft="true"
   			android:background="@drawable/previous"
   			android:contentDescription="@string/description">	
   			</ImageButton>
   			
			<ImageButton
			android:id="@+id/btn_switch"
			android:layout_width="42dp"
   			android:layout_height="42dp"
   			android:contentDescription="@string/description"
   			android:layout_centerVertical="true"
   			android:background="@drawable/switch_off"
   			android:layout_centerInParent="true">
			</ImageButton>
			
			<ImageButton
			android:id="@+id/btn_next"
			android:layout_width="32dp"
   			android:layout_height="32dp"			
   			android:layout_alignParentRight="true"
   			android:background="@drawable/next"
   			android:layout_marginRight="5dp"
   			android:layout_marginLeft="5dp"
   			android:contentDescription="@string/description"
   			android:layout_centerVertical="true">
			</ImageButton>
	
		</RelativeLayout>
	 </RelativeLayout>
</RelativeLayout>
