<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_music_control"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    tools:context=".MusicControlActivity" >
    
    <RelativeLayout
    android:id="@+id/layout_music_control_title"
    android:layout_width="match_parent"
    android:layout_height="80dp"  
    >
    	<ImageButton
			android:id="@+id/ibtn_control_back"
			android:layout_width="wrap_content"
   			android:layout_height="wrap_content"			
   			android:layout_alignParentStart="true"
   			android:background="@drawable/music_control_back"
   			android:layout_marginStart="12dp"
   			android:layout_alignParentTop="true"
   			android1:layout_marginTop="10dp"
   			android:contentDescription="@string/description"
   			>
		</ImageButton>
		
    	<TextView
    	    android:id="@+id/textview_songname"
    	    android:layout_width="200dp"
   			android:layout_height="30dp"	
   			android:layout_marginTop="8dp"
   			android:gravity="center"
   			android1:layout_centerInParent="true"
    	    android:text="@string/songname"
    	    android:textSize="22sp"
    	    android:textColor="#000000"
    	    >
    	</TextView>
    	    
    	<TextView
    	    android:id="@+id/textview_songartist"
    	    android:layout_width="wrap_content"
   			android:layout_height="30dp"
   			android:layout_below="@id/textview_songname"	
   			android:layout_centerHorizontal="true"
    	    android:text="@string/songartist"  
    	    android:textColor="#000000"
    	    android:textSize="15sp"
    	    > 
    	</TextView>
    </RelativeLayout>
    
    <TextView
    	    android:id="@+id/textview_songlyric"
    	    android:layout_width="match_parent"
   			android:layout_height="match_parent"
   			android:layout_below="@id/layout_music_control_title"	
   			android:layout_centerHorizontal="true"
    	   
    	    android:textColor="#000000"
    	    android:textSize="15sp"
    	    android1:layout_marginBottom="90dp"
    	    > 
    </TextView>
    
    <RelativeLayout
    android:id="@+id/layout_songcontrol"
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_margin="15dp"
    android:layout_height="75dp"  
    >
    	<ImageButton
    		android:id="@+id/ibtn_control_love"
    		android:layout_width="40dp"
   			android:layout_height="40dp"
   			android:layout_alignParentStart="true"
   			android:background="@drawable/music_control_love" 
   			android:layout_centerVertical="true"
   			android:contentDescription="@string/description"  
    	    >
    	</ImageButton>
    	
    	<ImageButton
    		android:id="@+id/ibtn_control_switch"
    		android:layout_width="55dp"
   			android:layout_height="55dp"
   			android:layout_centerInParent="true"
   			android:background="@drawable/music_control_playpause" 
   			android:layout_centerVertical="true"
   			android:contentDescription="@string/description"  
    	    >
    	</ImageButton>
    	
    	<ImageButton
    		android:id="@+id/ibtn_control_previous"
    		android:layout_width="30dp"
   			android:layout_height="30dp"
   			android:layout_toStartOf="@id/ibtn_control_switch"
   			android:layout_marginEnd="30dp"
   			android:background="@drawable/music_control_previous" 
   			android:layout_centerVertical="true"
   			android:contentDescription="@string/description"  
    	    >
    	</ImageButton>
    	
    	<ImageButton
    		android:id="@+id/ibtn_control_next"
    		android:layout_width="30dp"
   			android:layout_height="30dp"
   			android:layout_toEndOf="@id/ibtn_control_switch"
   			android:layout_marginStart="30dp"
   			android:background="@drawable/music_control_next" 
   			android:layout_centerVertical="true"
   			android:contentDescription="@string/description"  
    	    >
    	</ImageButton>
    	
    	<ImageButton
    		android:id="@+id/ibtn_control_list"
    		android:layout_width="30dp"
   			android:layout_height="30dp"
   			android:layout_alignParentEnd="true"
   			android:background="@drawable/music_control_list" 
   			android:layout_centerVertical="true"
   			android:contentDescription="@string/description"  
    	    >
    	</ImageButton>   
    	  
    </RelativeLayout>
     
</RelativeLayout>
